--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,8 +4,8 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
-  url = "#about"
+  name = "Demo"
+  url = "#hero"
   weight = 10
 
 [[main]]
@@ -24,13 +24,18 @@
   weight = 40
 
 [[main]]
+  name = "Courses"
+  url = "courses/"
+  weight = 50
+
+[[main]]
   name = "Contact"
   url = "#contact"
   weight = 60
 
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+#Link to a PDF of your resume/CV from the menu.
+#To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
+[[main]]
+    name = "CV"
+    url = "files/cv.pdf"
+    weight = 70
